# aws-infringement

./: README.md  pyproject.toml
aws_infringement/: scrapy.cfg
aws_infringement/aws_infringement/: items.py  middlewares.py  pipelines.py  settings.py
aws_infringement/aws_infringement/spiders/: aws_excel_spider.py
excels/: example.xlsx
